Fixed overflow bug (for real this time)

--- a/src/App.scss
+++ b/src/App.scss
@@ -38,6 +38,7 @@
   height: 100%;
   background-color: var(--col-bg);
   scroll-behavior: smooth;
+  overflow-x: clip;
 }
 
 .wrapper {
